test-cases/negative/test_087_function_in_function.lay
# negative test: function definition inside another function
# expected: parser should reject this

define function outer that takes nothing and returns Void
  define function inner that takes nothing and returns Void
    print 'inner'
  end function
end function


